demo_monitoring_prometheus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: grafana.cloudnloud.in
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
  - host: prometheus.cloudnloud.in
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-service
          servicePort: 8080
  - host: alertmanager.cloudnloud.in
    http: 
      paths:
      - path: /
        backend:
          serviceName: alertmanager
          servicePort: 9093
